[package]
name = "aoc2020"
version = "0.1.0"
authors = ["henro <henrik.sjooh@configura.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
eyre = "0.6.3"
ctor = "0.1.16"
thiserror = "1.0.22"
